* Disclaim my copyright over compilation of any Pugs releases as well   as for compilation of this repisitory.
* Per Allison's suggestion, create a demonstratably legally separate
  third-party/ directory to put all code derived form upstream projects.
  All third-party parts under src/ will be moved here.

* Check in the first member of third-party: Text.Regex.Lazy, a full
  Rule engine with .*+ and .*? control (modulo named captures and <ws>); we
  just need a surface syntax for it to run Perl 6 rules. :)

  (The PArrows approach I used before did not handle lazy streams
   and wouldn't allow piecemeal conversion from our Parsec rules
   into Rule rules.)


git-svn-id: http://svn.pugscode.org/pugs@10049 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/README
+++ b/README
@@ -11,10 +11,22 @@
 |                                                                   |
 =====================================================================
 
-Pugs is Copyright 2005, 2006 by Audrey Tang.  All Rights Reserved.
+COPYRIGHT DISCAIMER
+--------------------
 
-CONTRIBUTED WORKS UNDER OTHER LICENSES
---------------------------------------
+The author disclaims copyright for the compilation of the Pugs distribution.
+
+In place of a legal notice, here is a blessing:
+
+    May you do good and not evil.
+    May you find forgiveness for yourself and forgive others.
+    May you share freely, never taking more than you give.
+
+The Pugs distribution contains copyrighted contributions from third-party
+projects, under their own licenses cited below.
+
+COPYRIGHTED WORKS FROM THIRD-PARTY PROJECTS
+-------------------------------------------
 
 The "PGE" subsystem is derived from PGE by Patrick Michaud,
 under the same license as Perl 5.  See src/pge/README.
@@ -41,27 +53,14 @@ The "FastPackedString" subsystem is derived from Don Stewart et all's work,
 under a BSD-style license.  See src/Data/FastPackedString.hs.
 
 The "Unicode" subsystem is derived from Dimitry Golubovsky's work,
-under the same license as GHC.  See LICENSES/GHC.
+under the same license as GHC.  See src/Unicode.hs.
 
 The "PArrows" subsystem is derived from Einar Karttunen's work,
 under a BSD-style license.  See src/Text/Parser/PArrows.cabal.
 
-LICENSE INFORMATION
--------------------
-
-This code is free software; you can redistribute it and/or modify it under
-the terms of either:
-
-    a) the GNU General Public License, version 2, or
-    b) the Artistic License, version 2.
-
-Please see the "GPL-2" and "Artistic-2" files under the "LICENSE" directory
-for the full license text.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See either
-the GNU General Public License or the Artistic License for more details.
+The "TextRegexLazy" subsystem is derived from Christopher Kuklewic's
+work, under a BSD-style license.  See
+third-party/TextRegexLazy/Text/Regex/Lazy/LICENSE.
 
 INSTALLATION
 ------------
