* S05: Oops, turns out I entirely read perlop.pod incorrectly;   "it matches once only" means "it matches successfully once only",   not "it performs the match once only".  Sorry, TimToady++'s   original example of:
    (state $x) ||= / pattern /; 

  was correct.

git-svn-id: http://svn.pugscode.org/pugs@23354 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -1066,9 +1066,9 @@ A C<rule> is really short for:
 The Perl 5 C<?...?> syntax (I<match once>) was rarely used and can be
 now emulated more cleanly with a state variable:
 
-    (state $x) //= / pattern /;    # only matches first time
+    (state $x) ||= / pattern /;    # only matches first time
 
-To reset the pattern, simply say C<undefine $x>.
+To reset the pattern, simply say C<$x = 0>.
 
 =back
 
